1.Fixed the text overlap 2.Adjusted the padding

--- a/src/app/components/pages/home/banner/banner.component.css
+++ b/src/app/components/pages/home/banner/banner.component.css
@@ -1,11 +1,12 @@
 div {
-    margin-bottom: -63px;
+    margin-bottom: -61px;
   }
   div h1 {
-    font-size: 35px;
+    font-size: 29px;
   }
   div p {
     font-size: 20px;
   }
+ 
  
   
